Introduce basic APIs for todos, todos categories and wellness rings [#1]
